[gd_scene load_steps=9 format=3 uid="uid://cer8cxeuyejur"]

[ext_resource type="Script" path="res://in-game/units/Unit.gd" id="1_otkls"]
[ext_resource type="Texture2D" uid="uid://b2og7p07nm1up" path="res://assets/icon.svg" id="2_opjdf"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hl0l6"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:hitpoints")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_746df"]
size = Vector2(16, 45)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bcuhq"]
radius = 27.0
height = 86.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1ww4w"]
radius = 177.003

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhpkd"]
bg_color = Color(0.901961, 0, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvlvo"]
bg_color = Color(0.129412, 0.72549, 0, 1)

[node name="Unit" type="CharacterBody2D"]
script = ExtResource("1_otkls")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hl0l6")

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_746df")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.351563)
texture = ExtResource("2_opjdf")

[node name="Attack" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="Attack"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_bcuhq")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Aggro" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483648

[node name="AggroCollision" type="CollisionShape2D" parent="Aggro"]
shape = SubResource("CircleShape2D_1ww4w")

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -22.0
offset_top = -38.0
offset_right = 22.0
offset_bottom = -30.0
theme_override_styles/background = SubResource("StyleBoxFlat_mhpkd")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvlvo")
value = 50.0
show_percentage = false

[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="Attack" to="." method="_on_attack_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Aggro" to="." method="_on_aggro_area_entered"]
